examples/illtyped/import.gr
-- The type error is in the included file
import examples/illtyped/approximation.gr

foo : Int
foo = 0
